argocd/apps/netbox/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: netbox
  labels:
    name: netbox
