argocd/apps/netbox/netbox-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netbox
  namespace: netbox
  labels:
    app: netbox
spec:
  selector:
    matchLabels:
      app: netbox
  replicas: 1
  template:
    metadata:
      labels:
        app: netbox
    spec:
      containers:
        - name: netbox
          image: linuxserver/netbox:3.2.6
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
      restartPolicy: Always
