argocd/apps/netbox/redis-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: netbox
  labels:
    app: redis
spec:
  selector:
    matchLabels:
      app: redis
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:7.0.3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6379
              protocol: TCP
      restartPolicy: Always
