argocd/apps/netbox/netbox-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netbox
  namespace: netbox
spec:
  selector:
    app:  netbox
  type: ClusterIP
  ports:
    - name: ui
      port: 8000
      protocol: TCP
      targetPort: 8000
