argocd/apps/netbox/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  redis
  namespace: netbox
spec:
  selector:
    app:  redis
  type: ClusterIP
  ports:
    - name: redis
      port: 6379
      protocol: TCP
      targetPort: 6379
