argocd/apps/netbox/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netbox
  namespace: netbox
spec:
  rules:
  - host: netbox.legion.lan
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: netbox
            port:
              number: 8000
